[gd_scene load_steps=9 format=3 uid="uid://y3jm0voud3mo"]

[ext_resource type="PackedScene" uid="uid://bye4t8i6ojctc" path="res://level_parts/building_blocks/silo_doorway.tscn" id="1_8leia"]
[ext_resource type="Script" path="res://level_parts/building_blocks/silo.gd" id="1_cav4h"]
[ext_resource type="PackedScene" uid="uid://8o43ofhcf47k" path="res://level_parts/building_blocks/silo_door.tscn" id="2_dkhwu"]
[ext_resource type="PackedScene" uid="uid://bg13w8tx0i5e0" path="res://level_parts/building_blocks/wall_01.tscn" id="3_emki0"]
[ext_resource type="PackedScene" uid="uid://bju0m06pn6kg6" path="res://level_parts/building_blocks/ceiling_01.tscn" id="4_qejxd"]
[ext_resource type="PackedScene" uid="uid://chxd1muqmud8w" path="res://level_parts/building_blocks/floor_01.tscn" id="5_qsxvg"]
[ext_resource type="Script" path="res://level_parts/building_blocks/silo_lock.gd" id="6_tsq1w"]
[ext_resource type="PackedScene" uid="uid://bk6ro78efnftv" path="res://entities/digital_lock.tscn" id="7_8b7tr"]

[node name="Silo" type="Node3D"]
script = ExtResource("1_cav4h")

[node name="silo_doorway" parent="." instance=ExtResource("1_8leia")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="silo_door" parent="." instance=ExtResource("2_dkhwu")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="Wall01" parent="." instance=ExtResource("3_emki0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00257206, 0, -2.82056)

[node name="Ceiling" parent="Wall01" instance=ExtResource("4_qejxd")]

[node name="Ceiling2" parent="Wall01" instance=ExtResource("4_qejxd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="Wall02" parent="." instance=ExtResource("3_emki0")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -3.99743, 0, -2.82056)

[node name="Wall03" parent="." instance=ExtResource("3_emki0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00257206, 0, 2.81257)

[node name="Ceiling" parent="Wall03" instance=ExtResource("4_qejxd")]

[node name="Ceiling2" parent="Wall03" instance=ExtResource("4_qejxd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="Wall04" parent="." instance=ExtResource("3_emki0")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -3.99743, 0, 2.81257)

[node name="Floor01" parent="." instance=ExtResource("5_qsxvg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00257206, 0, -2.82056)

[node name="Floor02" parent="." instance=ExtResource("5_qsxvg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99743, 0, -2.82056)

[node name="Floor03" parent="." instance=ExtResource("5_qsxvg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00257206, 0, 2.81499)

[node name="Floor04" parent="." instance=ExtResource("5_qsxvg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99743, 0, 2.81499)

[node name="LockDown" type="Node3D" parent="." node_paths=PackedStringArray("silo_door")]
script = ExtResource("6_tsq1w")
silo_door = NodePath("../silo_door")

[node name="LockUp" type="Node3D" parent="." node_paths=PackedStringArray("silo_door")]
script = ExtResource("6_tsq1w")
silo_door = NodePath("../silo_door")
top = true

[node name="digital_lock" parent="." node_paths=PackedStringArray("target") instance=ExtResource("7_8b7tr")]
transform = Transform3D(-2.18557e-08, 0.5, -2.18557e-08, 0, -2.18557e-08, -0.5, -0.5, -2.18557e-08, 9.55343e-16, -6.09652, 1.79868, -3.24035)
target = NodePath("../LockDown")
complexity = 3.0

[node name="digital_lock2" parent="." node_paths=PackedStringArray("target") instance=ExtResource("7_8b7tr")]
transform = Transform3D(6.55671e-08, -0.5, 2.18557e-08, 0, -2.18557e-08, -0.5, 0.5, 6.55671e-08, -2.86603e-15, 2.07023, 1.79868, -3.24035)
target = NodePath("../LockUp")
complexity = 3.0

[node name="digital_lock3" parent="." node_paths=PackedStringArray("target") instance=ExtResource("7_8b7tr")]
transform = Transform3D(-2.18557e-08, 0.5, -2.18557e-08, 0, -2.18557e-08, -0.5, -0.5, -2.18557e-08, 9.55343e-16, -6.09652, 1.79868, 3.19311)
target = NodePath("../LockDown")
complexity = 3.0

[node name="digital_lock4" parent="." node_paths=PackedStringArray("target") instance=ExtResource("7_8b7tr")]
transform = Transform3D(6.55671e-08, -0.5, 2.18557e-08, 0, -2.18557e-08, -0.5, 0.5, 6.55671e-08, -2.86603e-15, 2.07023, 1.79868, 3.19311)
target = NodePath("../LockUp")
complexity = 3.0
metadata/_edit_pinned_properties_ = [&"complexity"]
